syntax = "proto3";
option java_multiple_files = true;
option java_package = "edu.cn.hitsz_ids.agents.grpc";
option java_outer_classname = "AgentsProto";

import "google/protobuf/empty.proto";

package edu.cn.hitsz_ids.agents;
service Stream {
  rpc input (stream Request) returns (stream Response) {}
  rpc output (stream Request) returns (stream Response) {}
}

enum Cmd {
  OPEN = 0;
  READ = 1;
  WRITE = 2;
  CLOSE = 3;
}

enum OpenOption {
  OP_READ = 0;
  OP_WRITE = 1;
}

message Exception {
  bytes stackTrace = 1;
  string message = 2;
}

message Request {
  string id = 6;
  message Open {
    repeated OpenOption options = 2;
  }
  message Read {
    int32 len = 1;
    int32 off = 2;
  }
  message Write {
    int32 len = 1;
    bytes bytes = 2;
  }
  message Create {
    string directory = 1;
    string name = 2;
    string identity = 3;
    repeated OpenOption options = 4;
  }
  message Close {}
  oneof Data {
    Open open = 1;
    Read read = 2;
    Write write = 3;
    Create create = 4;
    Close close = 5;
    Exception exception = 7;
  }
}

message Response {
  string id = 6;
  message Open {
    string name = 1;
    int64 length = 2;
  }
  message Read {
    int32 len = 1;
    bytes bytes = 2;
  }
  message Write {
    int32 length = 1;
  }
  message Create {
  }
  message Close {}
  oneof Data {
    Open open = 1;
    Read read = 2;
    Write write = 3;
    Create create = 4;
    Close close = 5;
    Exception exception = 7;
  }
}
